hub: add explicit JPMS module